# Timetable-Backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.py  main.py  pyproject.toml  requirements.txt
app/: database.py
src/: database.py  main.py
