[tool.poetry]
name = "timetable-backend"
version = "0.1.0"
readme = "README.md"
description = ""
authors = ["Rafay Ghafoor <rafayghafoor@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
pony = "^0.7.13"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
